--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {},
   "dependencies": {
     "ali-oss": "^6.11.2",
+    "chalk": "^4.1.0",
     "commander": "^6.2.0",
     "tinify": "^1.6.0-beta.2"
   },
